--- a/package.json
+++ b/package.json
@@ -4,71 +4,7 @@
   "description": "Ссылка на сайт <https://andrey-elxnitis.github.io/mesto/>",
   "main": "index.js",
   "dependencies": {
-    "asn1.js": "^4.10.1",
-    "brace-expansion": "^1.1.11",
-    "buffer": "^4.9.2",
-    "commondir": "^1.0.1",
-    "component-emitter": "^1.3.0",
-    "concat-map": "^0.0.1",
-    "console-browserify": "^1.2.0",
-    "constants-browserify": "^1.0.0",
-    "copy-descriptor": "^0.1.1",
-    "core-js": "^3.6.5",
-    "core-util-is": "^1.0.2",
-    "create-ecdh": "^4.0.3",
-    "cyclist": "^1.0.1",
-    "decode-uri-component": "^0.2.0",
-    "define-property": "^2.0.2",
-    "domain-browser": "^1.2.0",
-    "elliptic": "^6.5.3",
-    "emojis-list": "^3.0.0",
-    "esrecurse": "^4.2.1",
-    "estraverse": "^4.3.0",
-    "events": "^3.1.0",
-    "extend-shallow": "^3.0.2",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "figgy-pudding": "^3.5.2",
-    "for-in": "^1.0.2",
-    "fragment-cache": "^0.2.1",
-    "fs.realpath": "^1.0.0",
-    "get-value": "^2.0.6",
-    "glob-parent": "^5.1.1",
-    "graceful-fs": "^4.2.4",
-    "has-value": "^1.0.0",
-    "has-values": "^1.0.0",
-    "hash.js": "^1.1.7",
-    "hmac-drbg": "^1.0.1",
-    "https-browserify": "^1.0.0",
-    "ieee754": "^1.1.13",
-    "iferr": "^0.1.5",
-    "imurmurhash": "^0.1.4",
-    "infer-owner": "^1.0.4",
-    "inherits": "^2.0.4",
-    "is-accessor-descriptor": "^0.1.6",
-    "is-binary-path": "^2.1.0",
-    "is-buffer": "^1.1.6",
-    "is-data-descriptor": "^0.1.4",
-    "is-descriptor": "^0.1.6",
-    "is-extendable": "^0.1.1",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.1",
-    "is-number": "^3.0.0",
-    "is-plain-object": "^2.0.4",
-    "is-windows": "^1.0.2",
-    "is-wsl": "^1.1.0",
-    "isarray": "^1.0.0",
-    "isobject": "^3.0.1",
-    "json-schema-traverse": "^0.4.1",
-    "json5": "^1.0.1",
-    "kind-of": "^6.0.3",
-    "map-cache": "^0.2.2",
-    "miller-rabin": "^4.0.1",
-    "minimalistic-assert": "^1.0.1",
-    "minimalistic-crypto-utils": "^1.0.1",
-    "minimatch": "^3.0.4",
-    "minimist": "^1.2.5",
-    "mixin-deep": "^1.3.2"
+    "core-js": "^3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
